--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </style>
 </head>
 <body>
-<header>陸上フォームAIコーチ</header>
+<header>陸上フォームAIコーチ Search-Up InsiderProgram</header>
 <div id="app">
   <nav>
     <button class="tabBtn active" data-tab="record">録画</button>
